<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/manual"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:background="#2196F3"
            android:layout_width="match_parent"
            android:layout_height="53dp" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="#2196F3"
            android:text="@string/drag" />

        <Button
            android:id="@+id/button2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="#2196F3"
            android:text="@string/inclination" />

        <TextView
            android:id="@+id/txtText"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:alpha="0.87"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textColor="#2196F3"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
