<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->
    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_id" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

    </LinearLayout>
    <!-- Notice -->

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:padding="16dp"
            android:text="@string/connect"
            android:textColor="#2196F3"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
