<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56c1c7"
    android:orientation="vertical"
    tools:context=".Fragment2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/together_tap"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvBluetoothStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/btnBluetoothOn"
                app:layout_constraintTop_toBottomOf="@+id/btnBluetoothOn" />

            <Button
                android:id="@+id/btnBluetoothOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="#2196F3"
                android:text="@string/bluetooth_on"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnBluetoothOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="#2196F3"
                android:text="@string/bluetooth_off"
                android:textColor="#ffffff" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="#56c1c7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sample_main_layout">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <FrameLayout
                    android:id="@+id/sample_content_fragment"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="0px" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>